// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avatar shape 1`] = `
<div class="ghb-skeleton ghb-skeleton--animate">
  <div class="ghb-skeleton__avatar ghb-skeleton__avatar--square" style="width: 20px; height: 20px;"></div>
  <div class="ghb-skeleton__content"></div>
</div>
`;

exports[`disable animate 1`] = `
<div class="ghb-skeleton ghb-skeleton--animate">
  <div class="ghb-skeleton__content">
    <div class="ghb-skeleton__row" style="width: 60%;"></div>
  </div>
</div>
`;

exports[`render chidren 1`] = `<div>Content</div>`;

exports[`round prop 1`] = `
<div class="ghb-skeleton ghb-skeleton--animate ghb-skeleton--round">
  <div class="ghb-skeleton__avatar ghb-skeleton__avatar--round"></div>
  <div class="ghb-skeleton__content">
    <h3 class="ghb-skeleton__title"></h3>
  </div>
</div>
`;

exports[`row-width array 1`] = `
<div class="ghb-skeleton ghb-skeleton--animate">
  <div class="ghb-skeleton__content">
    <div class="ghb-skeleton__row" style="width: 100%;"></div>
    <div class="ghb-skeleton__row" style="width: 30px;"></div>
    <div class="ghb-skeleton__row" style="width: 5rem;"></div>
    <div class="ghb-skeleton__row"></div>
  </div>
</div>
`;
